# gestalt-rust

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cargo.toml.bak  LICENSE-MIT  MINIMAX.md  PR_BODY.md  QUICKSTART.md  README.md  RULES.md  SKILL.md  SRC.md  STATE.md  TASK.md  TASK_minimax.md  TIMELINE_ANALYSIS_REPORT.md  TODO.md  WALKTHROUGH.md  check_output.txt  check_output_final.txt  check_output_success.txt  clippy_actual.txt  clippy_output.txt  codex_gestalt_bridge.py  error_output.txt  gestalt_app_analyze.txt  gestalt_bridge.py  gestalt_hybrid.py  gestalt_superagent.py  gestalt_terminal_analyze.txt  gestalt_workflows.py  health_report.txt  history.txt  metadata.json  plantilla.md  render.yaml  (+4 more)
.ai-core/: ARCHITECTURE.md
.cargo/: config.toml
.gitcore/: AGENT_INDEX.md  ARCHITECTURE.md  PROJECT_README.md  SRC.md  STATE.md  TODO.md  features.json
.gitcore/planning/: ALL_SPRINTS.md  HANDOFF_PROMPT_NEXT_AGENT.md  PLANNING.md  TASK.md
.gitcore/reports/: AGENT_TRENDS_ANALYSIS.md  context_snapshot.md  issue_18_body.md  project_status.md
.github/: SECURITY.md  copilot-instructions.md
.github/issues/: .issue-mapping.json  FEATURE_agent_benchmark_leaderboard.md  FEAT_agentic-core-transition.md  FEAT_framework_integration.md  FEAT_native-agent-tools.md  FEAT_repl-streaming.md  FEAT_unified-config.md  IMPROVEMENT_vfs_binary_filewatcher.md  MVP_Status.md  PLAN_cli-roadmap.md  STATUS.md  TASK_jules_release_validation.md  TASK_research-tendencias-agentes.md  _TEMPLATE.md
.github/workflows/: agent-dispatcher.yml  benchmarks.yml  ci.yml  guardian-agent.yml  jules-auto-merge.yml  planner-agent.yml  release.yml
.✨/: AGENT_INDEX.md  ARCHITECTURE.md  features.json
PENDING_TASKS/: ALL_TASKS.md  FASE_1_OPENCLAW.md  FASE_2_OBSIDIAN.md  FASE_5_TESTS.md  FASE_7_OPTIMIZATION.md  FASE_9_SUBAGENTS.md
agent_benchmark/: adapters.py  runner.py
benchmarks/baseline/: memory_baseline.json  rust_baseline.json
config/: default.toml  gestalt.toml
docs/: BENCHMARKING.md  COMMIT_STANDARD.md  KNOWN_ISSUES.md  mcp_zed_settings.json
docs/agent-docs/: PROMPT_JULES_CYBER_TERMINAL.md  PROMPT_PHASE_6_IMPLEMENTATION.md  REPORT_GESTALT_VS_AGENTIC.md  SPEC_CYBER_TERMINAL.md  STANDALONE_CARGO_AGENTIC.md
docs/guides/: BUILD_STRATEGY.md  QUICKSTART.md  RAG_OPERATIONS.md
docs/management/: RULES.md
docs/prompts/: ARCHITECTURE_REVIEW_20251231_1314.md  ARCHITECTURE_REVIEW_20251231_1320.md  ARCHITECTURE_REVIEW_20251231_1742.md  ARCHITECTURE_REVIEW_20251231_1752.md
gestalt_app/: analyze_output.txt  pubspec.yaml
gestalt_app/gestalt_app/: README.md  pubspec.yaml
gestalt_app/gestalt_app/rust/: Cargo.toml
gestalt_app/gestalt_app/rust/src/: frb_generated.rs
gestalt_app/gestalt_app/rust/src/api/: simple.rs
gestalt_app/integration_test/: app_test.dart
gestalt_cli/: Cargo.toml
gestalt_cli/src/: REPL.md  config.rs  main.rs  repl.rs
gestalt_cli/tests/: cli_tests.rs
gestalt_core/: Cargo.toml  errors.txt
gestalt_core/benches/: bench_main.rs  core_bench.rs
gestalt_core/src/: config.rs  lib.rs
gestalt_core/src/adapters/: mod.rs
gestalt_core/src/adapters/auth/: google_oauth.rs  google_pkce.rs  mod.rs  qwen_oauth.rs
gestalt_core/src/adapters/llm/: fallback.rs  gemini.rs  gemini_oauth.rs  local_candle.rs  minimax.rs  mod.rs  ollama.rs  openai.rs  qwen.rs
gestalt_core/src/adapters/mcp/: client_impl.rs  config.rs  mod.rs  tools.rs
gestalt_core/src/adapters/persistence/: mod.rs  repo_github.rs  surreal_db.rs
gestalt_core/src/application/: CONFIG.md  agent.rs  config.rs  consensus.rs  indexer.rs  mcp_service.rs  mod.rs  subagent.rs
gestalt_core/src/application/agent/: gestalt_agent.rs  mod.rs  tools.rs
gestalt_core/src/context/: detector.rs  mod.rs  repo.rs  scanner.rs
gestalt_core/src/db/: surreal.rs
gestalt_core/src/domain/: genui.rs  mod.rs
gestalt_core/src/domain/rag/: embeddings.rs
gestalt_core/src/mcp/: MCP.md  client_impl.rs  mod.rs  registry.rs
gestalt_core/src/ports/inbound/: mod.rs
gestalt_core/src/ports/outbound/: llm_provider.rs  mcp_client.rs  mod.rs  repo_manager.rs  vfs.rs
gestalt_core/tests/: mock_mcp.py  test_vector_search.rs
gestalt_infra_embeddings/: Cargo.toml
gestalt_infra_embeddings/src/: lib.rs
gestalt_infra_github/: Cargo.toml
gestalt_mcp/: Cargo.toml  start.bat  ui.html
gestalt_mcp/src/: bridge.rs  lib.rs  main.rs
gestalt_swarm/: Cargo.toml
gestalt_swarm/src/: load_test.rs  main.rs  pool.rs
gestalt_swarm/tests/: swarm_cli_test.rs
gestalt_terminal/: README.md  pubspec.yaml
gestalt_terminal/rust/: Cargo.toml
gestalt_terminal/rust/src/: frb_generated.rs
gestalt_terminal/rust/src/api/: mcp.rs  mod.rs  simple.rs  terminal.rs
gestalt_timeline/: .env.example  Cargo.toml  config.toml
gestalt_timeline/src/: config.rs  lib.rs  main.rs  tests.rs
gestalt_timeline/src/cli/: commands.rs  mod.rs  repl.rs
gestalt_timeline/src/db/: mod.rs  surreal.rs
gestalt_timeline/src/models/: mod.rs  project.rs  runtime_state.rs  task.rs  timeline_event.rs  timestamp.rs
gestalt_timeline/src/services/: agent.rs  auth.rs  context_compaction.rs  dispatcher.rs  file_manager.rs  gemini.rs  index.rs  llm.rs  llm_minimax.rs  memory.rs  mod.rs  project.rs  protocol_sync.rs  reviewer_merge_agent.rs  runtime.rs  server.rs  task.rs  task_queue.rs  telegram.rs  timeline.rs  vfs.rs  watch.rs
gestalt_timeline/tests/: e2e_runtime.rs  integration.rs  memory_integration_test.rs  rag_test.rs  test_protocol_sync.rs
gestalt_tui/: Cargo.toml
gestalt_tui/src/: main.rs  state.rs  swarm.rs
gestalt_tui/src/ui/: agents.rs  header.rs  input.rs  mod.rs  output.rs  status.rs
gestalt_ui/: Cargo.toml  README.md
gestalt_ui/src/: app.rs  main.rs
gestalt_ui/src/views/: timeline.rs
gestaltctl/: Cargo.toml
gestaltctl/src/: main.rs
integration_test/: health_sharing_e2e_test.dart
scripts/: compare_benchmarks.py  monitor_jules.py
skills/: benchmark_memory.py  gestalt-swarm.md  index_compression.py  jules.md  memory_system.py
synapse-agentic/: Cargo.toml
synapse-agentic/src/: lib.rs
(+116 files in other folders)
