[workspace]
members = [
    "gestalt_core",
    "gestalt_infra_github",
    "gestalt_infra_embeddings",
    "gestalt_cli",
    "gestalt_timeline", "gestalt_mcp", "gestalt_ui",
    "gestaltctl",
    "synapse-agentic",
    "gestalt_swarm",
]
resolver = "2"

[profile.dev-fast]
inherits = "dev"
debug = 0
incremental = true
codegen-units = 256

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
