[workspace]
members = [
    "gestalt_core",
    "gestalt_cli",
    "gestalt_timeline",
    "gestalt_swarm",
    "synapse-agentic",
    ]
resolver = "2"

[profile.dev-fast]
inherits = "dev"
debug = 0
incremental = true
codegen-units = 256

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
