[package]
name = "gestalt_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
gestalt_core = { path = "../gestalt_core" }
tokio = { version = "1.37", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
