[package]
name = "gestalt_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
gestalt_core = { path = "../gestalt_core" }
synapse-agentic = { path = "../synapse-agentic" }
tokio = { version = "1.37", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.10"
config = "0.15"
thiserror = "1.0"
rustyline = "17.0.2"
futures = "0.3.31"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
home = "0.5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
