[package]
name = "gestalt_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"
futures = "0.3" # Added futures

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking & Auth
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
oauth2 = "4.4"

# Interop
flutter_rust_bridge = "=2.11.1"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Git
git2 = "0.18"

# OAuth2 helpers
dirs = "5.0"
chrono = "0.4"
url = "2.5"
open = "5.0"

# PKCE helpers
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
mcp-protocol-sdk = "0.5.1"
walkdir = "2.5.0"
ignore = "0.4.25"
config = "0.15.19"
directories = "6.0.0"
async-stream = "0.3.6"
candle-core = "0.8.0"
candle-transformers = "0.8.0"
candle-nn = "0.8.0"
hf-hub = { version = "0.3.2", features = ["tokio"] }
tokenizers = "0.20.0"
octocrab = "0.38"
surrealdb = { version = "2.0.5", features = ["kv-mem"] }
synapse-agentic = { path = "../../synapse-agentic" }


[lib]
crate-type = ["lib", "cdylib", "staticlib"]
