[package]
name = "gestalt_infra_embeddings"
version = "0.1.0"
edition = "2021"

[features]
default = []
bert = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde_json = "1.0"
gestalt_core = { path = "../gestalt_core" }
candle-core = { version = "0.8.4", optional = true }
candle-nn = { version = "0.8.4", optional = true }
candle-transformers = { version = "0.8.4", optional = true }
tokenizers = { version = "0.20.4", optional = true }
