[package]
name = "gestalt_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"

# Using the SDK found in core, assuming it is available or we will implement needed parts
# mcp-protocol-sdk = "0.5.1"  <-- Commented out for now, I'll rely on implementation or check if it builds.
# The prompt says implementation of server. I will build the structure first.
