[package]
name = "gestalt_mcp"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["macros", "ws"] }
tracing = "0.1"
anyhow = "1.0"
walkdir = "2.5"
reqwest = "0.12"

# Using the SDK found in core, assuming it is available or we will implement needed parts
# mcp-protocol-sdk = "0.5.1"  <-- Commented out for now, I'll rely on implementation or check if it builds.
# The prompt says implementation of server. I will build the structure first.
