[package]
name = "gestalt_swarm"
version = "1.0.0"
edition = "2021"
authors = ["Gestalt Team"]
description = "Gestalt Swarm CLI for multi-agent coordination"

[[bin]]
name = "swarm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
gestalt_core = { path = "../gestalt_core" }
synapse-agentic = { path = "../synapse-agentic" }
