[package]
name = "gestalt_timeline"
version = "0.1.0"
edition = "2021"
authors = ["Gestalt Team"]
description = "Meta-Agent CLI Orchestrator with Universal Timeline"
license = "MIT"

[[bin]]
name = "gestalt"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SurrealDB client (with embedded support for mem and rocksdb)
surrealdb = { version = "1.1", features = ["kv-mem", "kv-rocksdb"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
ulid = "1.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Environment
dotenvy = "0.15"

# AWS Bedrock
aws-config = "1.5"
aws-sdk-bedrockruntime = "1.71"

# For streaming responses
futures = "0.3"
config = "0.15.19"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.9"
