[package]
name = "gestalt_tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gestalt-tui"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.26", features = [] }
crossterm = { version = "0.27", features = ["events"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
