[package]
name = "gestaltctl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gestaltctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
