[package]
name = "synapse-agentic"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
futures = "0.3"
tokio = { version = "1.37", features = ["full"] }

[lib]
path = "src/lib.rs"
