[package]
name = "synapse-agentic"
version = "0.1.0"
edition = "2021"

[features]
default = []
mcp = []
db-surreal = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tokio = { version = "1.37", features = ["full"] }
