[package]
name = "gestalt_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
gestalt_core = { path = "../../../gestalt_core" }
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
flutter_rust_bridge = "=2.11.1"
tracing = "0.1"

[workspace]
members = ["."]
